[gd_scene load_steps=9 format=2]

[ext_resource path="res://World/Images/bg of game 3.jpg" type="Texture" id=1]
[ext_resource path="res://World/Font/DigitalDisco.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://World/Screen/MainMenuFinal.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0627451, 0.027451, 0.2, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="4" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.517647 )
position = Vector2( 160.005, 88 )
scale = Vector2( 0.23928, 0.23928 )
texture = ExtResource( 1 )

[node name="Inwards" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -57.0
margin_top = -62.0
margin_right = 57.0
margin_bottom = -30.0
custom_fonts/font = SubResource( 1 )
text = "Inwards"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -49.0
margin_top = -26.0
margin_right = 49.0
margin_bottom = 74.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="Buttons"]
margin_right = 98.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 2 )
text = "Start"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="Buttons"]
margin_top = 26.0
margin_right = 98.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 3 )
text = "Exit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hikikomori" type="Button" parent="Buttons"]
margin_top = 52.0
margin_right = 98.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 4 )
text = "Hikikomori?"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HowTo" type="Button" parent="Buttons"]
margin_top = 78.0
margin_right = 98.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 5 )
text = "How to play"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Buttons/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Buttons/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Buttons/Hikikomori" to="." method="_on_Hikikomori_pressed"]
[connection signal="pressed" from="Buttons/HowTo" to="." method="_on_HowTo_pressed"]
